apollo server set up and schema added

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,5 +27,11 @@
     "jest": "^26.6.2",
     "nock": "^13.0.4",
     "node-fetch": "^2.6.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules",
+      "/__utils"
+    ]
   }
 }
